# potato-engine

./: .gitignore  CODEOWNERS  Cargo.toml  Makefile.toml  README.md
docs/: flowchart TD.mmd
ecs/: Cargo.toml
ecs/src/: archetypes.rs  commands.rs  components.rs  entities.rs  lib.rs  queries.rs  queues.rs  registries.rs
ecs/src/cameras/: mod.rs
ecs/src/systems/: mod.rs
ecs_macros/: Cargo.toml
ecs_macros/src/: lib.rs
engine/: Cargo.toml  Makefile.toml
engine/src/: lib.rs
engine/src/async/: mod.rs
engine/src/graphics/: mod.rs  viewports.rs
engine/src/graphics/buffers/: bindgroups.rs  layouts.rs  mod.rs  submissions.rs
engine/src/graphics/mesh/: mesh_allocator.rs  mod.rs
engine/src/graphics/shaders/: mod.rs  shader.wgsl
engine/src/input/: mod.rs
engine/src/utils/: mod.rs
src/: main.rs
src/engine/: camera.rs  mesh.rs  mod.rs  model.rs
src/engine/async/: mod.rs
src/engine/buffers/: mod.rs
src/engine/cameras/: fps_camera.rs  mod.rs
src/engine/draw_queue/: mod.rs
src/engine/graphics/: bindgroups.rs  mod.rs  viewports.rs
src/engine/graphics/buffers/: mod.rs
src/engine/mesh/: mesh_allocator.rs  mod.rs
src/engine_loop/: input.rs  mod.rs
src/graphics/: bindgroups.rs  buffers.rs  mod.rs  shaders.rs  viewports.rs
src/shaders/: shader.wgsl
src/utils/: mod.rs
test_game/: Cargo.toml
test_game/src/: main.rs
